===================
astroid's ChangeLog
===================


What's New in astroid 4.2.0?
============================
Release date: TBA



What's New in astroid 4.1.2?
============================
Release date: TBA

* Fix ``DuplicateBasesError`` crash in dataclass transform when a class has
  duplicate bases in its MRO (e.g., ``Protocol`` appearing both directly and
  indirectly). Catch ``MroError`` at ``.mro()`` call sites in
  ``brain_dataclasses.py``, consistent with the existing pattern elsewhere.

  Closes #2628

* Catch ``MemoryError`` when inferring f-strings with extremely large format
  widths (e.g. ``f'{0:11111111111}'``) so that inference yields ``Uninferable``
  instead of crashing.

  Closes #2762


What's New in astroid 4.1.1?
============================
Release date: 2026-02-22

* Let `UnboundMethodModel` inherit from `FunctionModel` to improve inference of
  dunder methods for unbound methods.

  Refs #2741

* Filter ``Unknown`` from ``UnboundMethod`` and ``Super`` special attribute
  lookup to prevent placeholder nodes from leaking during inference.

  Refs #2741


What's New in astroid 4.1.0?
============================
Release date: 2026-02-08

* Add support for equality constraints (``==``, ``!=``) in inference.
  Closes pylint-dev/pylint#3632
  Closes pylint-dev/pylint#3633

* Ensure ``ast.JoinedStr`` nodes are ``Uninferable`` when the ``ast.FormattedValue`` is
  ``Uninferable``. This prevents ``unexpected-keyword-arg`` messages in Pylint
  where the ``Uninferable`` string appeared in function arguments that were
  constructed dynamically.

  Closes pylint-dev/pylint#10822

* Add support for type constraints (`isinstance(x, y)`) in inference.

  Closes pylint-dev/pylint#1162
  Closes pylint-dev/pylint#4635
  Closes pylint-dev/pylint#10469

* Make `type.__new__()` raise clear errors instead of returning `None`

* Move object dunder methods from ``FunctionModel`` to ``ObjectModel`` to make them