@@ -269,6 +269,10 @@ class ModuleModel(ObjectModel):
 
 
 class FunctionModel(ObjectModel):
+    def _is_builtin_func(self) -> bool:
+        func = self._instance
+        return isinstance(func.parent, nodes.Module) and not func.root().pure_python
+
     @property
     def attr___name__(self):
         return node_classes.Const(value=self._instance.name, parent=self._instance)
@@ -287,6 +291,8 @@ class FunctionModel(ObjectModel):
     @property
     def attr___defaults__(self):
         func = self._instance
+        if self._is_builtin_func():
+            raise AttributeInferenceError(target=func, attribute="__defaults__")
         if not func.args.defaults:
             return node_classes.Const(value=None, parent=func)
 
@@ -296,6 +302,10 @@ class FunctionModel(ObjectModel):
 
     @property
     def attr___annotations__(self):
+        if self._is_builtin_func():
+            raise AttributeInferenceError(
+                target=self._instance, attribute="__annotations__"
+            )
         obj = node_classes.Dict(
             parent=self._instance,
             lineno=self._instance.lineno,
@@ -336,6 +346,8 @@ class FunctionModel(ObjectModel):
 
     @property
     def attr___dict__(self):
+        if self._is_builtin_func():
+            raise AttributeInferenceError(target=self._instance, attribute="__dict__")
         return node_classes.Dict(
             parent=self._instance,
             lineno=self._instance.lineno,
@@ -344,10 +356,27 @@ class FunctionModel(ObjectModel):
             end_col_offset=self._instance.end_col_offset,
         )
 
-    attr___globals__ = attr___dict__
+    @property
+    def attr___globals__(self):
+        if self._is_builtin_func():
+            raise AttributeInferenceError(
+                target=self._instance, attribute="__globals__"
+            )
+        return node_classes.Dict(
+            parent=self._instance,
+            lineno=self._instance.lineno,
+            col_offset=self._instance.col_offset,
+            end_lineno=self._instance.end_lineno,
+            end_col_offset=self._instance.end_col_offset,
+        )
 
     @property
     def attr___kwdefaults__(self):
+        if self._is_builtin_func():
+            raise AttributeInferenceError(
+                target=self._instance, attribute="__kwdefaults__"
+            )
+
         def _default_args(args, parent):
             for arg in args.kwonlyargs:
                 try:
@@ -378,6 +407,9 @@ class FunctionModel(ObjectModel):
     @property
     def attr___get__(self):
         func = self._instance
+
+        if self._is_builtin_func():
+            raise AttributeInferenceError(target=func, attribute="__get__")
 
         class DescriptorBoundMethod(bases.BoundMethod):
             """Bound method which knows how to understand calling descriptor
