@@ -998,3 +998,21 @@ def test_super_special_attributes_fallback() -> None:
     thisclass_inferred = next(thisclass_node.infer())
     assert isinstance(thisclass_inferred, nodes.ClassDef)
     assert thisclass_inferred.name == "Base"
+
+
+@pytest.mark.parametrize(
+    "attr",
+    [
+        "__get__",
+        "__defaults__",
+        "__annotations__",
+        "__dict__",
+        "__globals__",
+        "__kwdefaults__",
+    ],
+)
+def test_builtin_func_no_descriptor_attrs(attr: str) -> None:
+    """Test builtin functions lack descriptor protocol attributes."""
+    node = builder.extract_node(f"eval.{attr}")
+    with pytest.raises(InferenceError):
+        next(node.infer())
